kubernetes/apps/observability/fluent-bit/app/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/udproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: fluentbit-syslog-route
spec:
  parentRefs:
  - name: envoy-internal
    sectionName: syslog
  rules:
  - backendRefs:
    - name: fluent-bit # Must match the Service name created by your HelmRelease
      port: 5140
