kubernetes/apps/observability/fluent-bit/app/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: fluentbit-syslog-route
spec:
  parentRefs:
  - name: envoy-internal
    sectionName: syslog
  rules:
  - backendRefs:
    - name: fluent-bit # Must match the Service name created by your HelmRelease
      port: 5140
